회원가입 email verify 추가 로그인시 uid Toast출력 제거 회원가입 activity_signup.xml 파일 버튼 추가

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,5 +47,5 @@ dependencies {
     // Add more firebase Library
     implementation 'com.google.firebase:firebase-auth'
     implementation 'com.google.firebase:firebase-database'
-
+    implementation 'com.google.android.gms:play-services-auth:19.2.0'
 }
