--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
             android:exported="false" />
         <activity
             android:name=".QuizAddActivity"
+            android:noHistory="true"
             android:exported="false" />
         <activity
             android:name=".QuizListActivity"
